# datadog-api-client-rust

./: .apigentools-info  .generated-info  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-3rdparty.csv  NOTICE  README.md  RELEASING.md  build.rs  generate-examples.sh  generate.sh  license-tool.toml  repository.datadog.yaml  run-tests.sh  rustfmt.toml
.generator/: conftest.py  pyproject.toml
.github/: CODEOWNERS  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chainguard/: self.github.pre-commit.pull-requests.sts.yaml  self.github.release.master.sts.yaml
.github/workflows/: approved_status.yml  changelog.yml  labeler.yml  prepare_release.yml  publish.yml  release.yml  reusable-ci.yml  reusable-examples.yml  reusable-integration-test.yml  reusable-pre-commit.yml  reusable-rust-test.yml  test.yml  test_integration.yml
examples/: v1_authentication_Validate.rs  v1_authentication_validate.rs  v1_aws-integration_CreateAWSEventBridgeSource.rs  v1_aws-integration_CreateAWSTagFilter.rs  v1_aws-integration_DeleteAWSEventBridgeSource.rs  v1_aws-integration_DeleteAWSTagFilter.rs  v1_aws-integration_UpdateAWSAccount.rs  v1_aws-integration_create_aws_account.rs  v1_aws-integration_create_aws_event_bridge_source.rs  v1_aws-integration_create_aws_tag_filter.rs  v1_aws-integration_create_new_aws_external_id.rs  v1_aws-integration_delete_aws_account.rs  v1_aws-integration_delete_aws_event_bridge_source.rs  v1_aws-integration_delete_aws_tag_filter.rs  v1_aws-integration_list_available_aws_namespaces.rs  v1_aws-integration_list_aws_accounts.rs  v1_aws-integration_list_aws_event_bridge_sources.rs  v1_aws-integration_list_aws_tag_filters.rs  v1_aws-integration_update_aws_account.rs  v1_aws-logs-integration_CheckAWSLogsLambdaAsync.rs  v1_aws-logs-integration_CreateAWSLambdaARN.rs  v1_aws-logs-integration_DeleteAWSLambdaARN.rs  v1_aws-logs-integration_check_aws_logs_lambda_async.rs  v1_aws-logs-integration_check_aws_logs_services_async.rs  v1_aws-logs-integration_create_aws_lambda_arn.rs  v1_aws-logs-integration_delete_aws_lambda_arn.rs  v1_aws-logs-integration_enable_aws_log_services.rs  v1_aws-logs-integration_list_aws_logs_integrations.rs  v1_aws-logs-integration_list_aws_logs_services.rs  v1_azure-integration_CreateAzureIntegration.rs  v1_azure-integration_UpdateAzureHostFilters.rs  v1_azure-integration_UpdateAzureIntegration.rs  v1_azure-integration_create_azure_integration.rs  v1_azure-integration_delete_azure_integration.rs  v1_azure-integration_list_azure_integration.rs  v1_azure-integration_update_azure_host_filters.rs  v1_azure-integration_update_azure_integration.rs  v1_dashboard-lists_CreateDashboardList.rs  v1_dashboard-lists_DeleteDashboardList.rs  v1_dashboard-lists_GetDashboardList.rs  (+2920 more)
patches/rvcr/: Cargo.toml
scripts/: license-check.sh
src/: lib.rs
src/apis/: configuration.rs  mod.rs  rum_api.rs
src/datadog/: configuration.rs  middleware.rs  mod.rs
src/datadogV1/: api_authentication.rs  api_aws_integration.rs  api_aws_logs_integration.rs  api_azure_integration.rs  api_dashboard_lists.rs  api_dashboards.rs  api_downtimes.rs  api_events.rs  api_gcp_integration.rs  api_hosts.rs  api_ip_ranges.rs  api_key_management.rs  api_logs.rs  api_logs_indexes.rs  api_logs_pipelines.rs  api_metrics.rs  api_monitors.rs  api_notebooks.rs  api_organizations.rs  api_pager_duty_integration.rs  api_security_monitoring.rs  api_service_checks.rs  api_service_level_objective_corrections.rs  api_service_level_objectives.rs  api_slack_integration.rs  api_snapshots.rs  api_synthetics.rs  api_tags.rs  api_usage_metering.rs  api_users.rs  api_webhooks_integration.rs  mod.rs  model_access_role.rs  model_add_signal_to_incident_request.rs  model_alert_graph_widget_definition.rs  model_alert_graph_widget_definition_type.rs  model_alert_value_widget_definition.rs  model_alert_value_widget_definition_type.rs  model_api_error_response.rs  model_api_key.rs  (+769 more)
src/datadogV2/: api_audit.rs  api_auth_n_mappings.rs  api_ci_visibility_pipelines.rs  api_ci_visibility_tests.rs  api_cloud_workload_security.rs  api_cloudflare_integration.rs  api_confluent_cloud.rs  api_dashboard_lists.rs  api_downtimes.rs  api_events.rs  api_fastly_integration.rs  api_gcp_integration.rs  api_incident_services.rs  api_incident_teams.rs  api_incidents.rs  api_ip_allowlist.rs  api_key_management.rs  api_logs.rs  api_logs_archives.rs  api_logs_metrics.rs  api_metrics.rs  api_monitors.rs  api_opsgenie_integration.rs  api_organizations.rs  api_processes.rs  api_restriction_policies.rs  api_roles.rs  api_rum.rs  api_security_monitoring.rs  api_sensitive_data_scanner.rs  api_service_accounts.rs  api_service_definition.rs  api_spans.rs  api_spans_metrics.rs  api_synthetics.rs  api_teams.rs  api_usage_metering.rs  api_users.rs  mod.rs  model_api_error_response.rs  (+1048 more)
src/models/: api_error_response.rs  api_key_create_attributes.rs  api_key_create_data.rs  api_key_create_request.rs  api_key_relationships.rs  api_key_response.rs  api_key_response_included_item.rs  api_key_update_attributes.rs  api_key_update_data.rs  api_key_update_request.rs  api_keys_response.rs  api_keys_sort.rs  api_keys_type.rs  application_key_create_attributes.rs  application_key_create_data.rs  application_key_create_request.rs  application_key_relationships.rs  application_key_response.rs  application_key_response_included_item.rs  application_key_update_attributes.rs  application_key_update_data.rs  application_key_update_request.rs  application_keys_sort.rs  application_keys_type.rs  audit_logs_event.rs  audit_logs_event_attributes.rs  audit_logs_event_type.rs  audit_logs_events_response.rs  audit_logs_query_filter.rs  audit_logs_query_options.rs  audit_logs_query_page_options.rs  audit_logs_response_links.rs  audit_logs_response_metadata.rs  audit_logs_response_page.rs  audit_logs_response_status.rs  audit_logs_search_events_request.rs  audit_logs_sort.rs  audit_logs_warning.rs  auth_n_mapping.rs  (+1077 more)
tests/: configuration_test.rs  fixtures.rs  main.rs  oauth_auth_test.rs
(+13162 files in other folders)
