[package]
authors = ["support@datadoghq.com"]
categories = [
    "api-bindings",
    "config",
    "web-programming::http-client"
]
description = "Rust client for the Datadog API."
edition = "2021"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE-3rdparty.csv",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/src/**/*",
    "/examples/*",
]
keywords = [
    "datadog",
    "api",
    "client",
    "openapi"
]
license = "Apache-2.0"
name = "datadog-api-client"
readme = "README.md"
repository = "https://github.com/DataDog/datadog-api-client-rust"
version = "0.27.0"

[dependencies]
async-stream = "0.3.6"
chrono = {version = "0.4.44", features = ["serde"] }
flate2 = "1.1.9"
form-data-builder = "1.0.1"
futures-core = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["multipart", "query"], default-features = false }
reqwest-middleware = { version = "0.5.1", features = ["query", "multipart"] }
reqwest-retry = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.17.0"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
zstd = "0.13.3"

[build-dependencies]
rustc_version = "0.4.1"

[dev-dependencies]
chrono = "0.4.44"
convert_case = "0.11.0"
cucumber = "0.20.2"
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
minijinja = "1.0.10"
regex = "1.12.3"
reqwest-vcr = "0.4.0"
sha256 = "1.6.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
vcr-cassette = "2.0.1"

[[test]]
harness = false # allows Cucumber to print output instead of libtest
name = "main"
path = "tests/main.rs"

[[example]] # signal to Cargo that dev-dependencies are allowed for examples
doc-scrape-examples = true
name="v1_authentication_Validate"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
